--- a/index.qmd
+++ b/index.qmd
@@ -1,224 +1,11 @@
 ---
-title: "Introduction to git and GitHub for LOEK"
-title-slide-attributes:
-  data-background-image: "screenshots/gittrup.png"
-  data-background-size: contain
-  data-background-opacity: "0.5"
-format:
-  revealjs:
-    smaller: true
-    scrollable: true
-    footer: "Introduction to git"
+toc: false
 ---
 
-
-# The problems we are trying to solve 
-
-![messy files](screenshots/files.png){height=223 fig-align="left"}
-
-## Publishing
-
-![](https://onlinelibrary.wiley.com/pb-assets/journal-banners/14668238-1501384690490.jpg){height=50}
-
-### Methods Article
-
-Presentation of **new analytical techniques, new software, etc.,** or critical evaluation of methods in macroecology. Typically, these papers do not exceed ten printed pages.
-
-
-### Open Research
-
-[Global Ecology and Biogeography](https://onlinelibrary.wiley.com/page/journal/14668238/homepage/forauthors.html) supports open research, therefore expects that the data supporting the results in the paper will be archived in an appropriate public repository, [...] **Whenever possible the scripts and other artefacts used to generate the analyses presented in the paper should also be publicly archived in a repository**
-
-## Version Control and Code Sharing
-
-![Version Control](screenshots/files_git.png){height=100px fig-align="left"}
-
-
-### Code Availability
-
-The code to reproduce the results presented in this study can be accessed at: https://github.com/LOEK-RS/global_applicability. The methods for the forward variable selection, area of applicability and dissimilarity index calibration are implemented in the R package ‘CAST’: https://cran.r-project.org/web/packages/CAST/index.html. [@Ludwig2023]
-
-### Providing Software
-
-All newly produced R functions and modelling steps are fully documented in https://github.com/environmentalinformatics-marburg/CAST. [@Meyer2018]
-
-
-
-## git
-
-* Version Control System
-* Developed by Linus Torvalds to work on the Linux Kernel with multiple people
-* Mainly for Code, but useful for many other things
-
-![](https://git-scm.com/images/logos/downloads/Git-Logo-2Color.png){height=100px}
-
-
-## Concept and Workflow
-
-
-
-:::: {.columns}
-
-::: {.column width="60%"}
-![*https://miro.medium.com/max/700/1*9qX9F9MGsWKfcmgTOR9BPw.png*](https://miro.medium.com/max/700/1*9qX9F9MGsWKfcmgTOR9BPw.png){width=500px}
-:::
-
-::: {.column width="40%"}
-* Command Line Tool
-* GUI Versions available
-* RStudio Integration
-* Application with a learning curve
-* Simple but easy to mess something up
-* Core unit: **A repository**
-
-
-```
-git init    # to start
+```{r}
+#| echo: false
+knitr::include_url("git_intro_presentation.html")
 ```
 
-
-```
-git status # to get infos
-
-git add    # to add files to the tracking system
-
-git commit # to define changed files as the new standard
-```
-
-:::
-
-
-::::
-
-
-
-## Integration in R Studio
-
-![](screenshots/rstudio1.png)
-
-
-
-## GitHub
-
-![](https://logosmarken.com/wp-content/uploads/2020/12/GitHub-Logo.png){height=100px}
-
-* Cloud Storage for git repositories
-* platform for code sharing, documentation, (data)...
-* collaboration and (scientific) communication
-
-
-### GitHub Pages!!
-
-* Wiki
-* Issue - Tracker
-* Automation
-* ...
-
-
-## GitHub
-
-
-:::: {.columns}
-
-
-::: {.column width="40%"}
-### Commands
-
-```
-git remote    # to get infos about remote
-
-git push      # to send commits to remote
-
-git pull      # to download commits from remote
-```
-
-
-```
-git clone     # to download a repository
-```
-:::
-
-
-::: {.column width="60%"}
-![*https://miro.medium.com/max/700/1*9qX9F9MGsWKfcmgTOR9BPw.png*](https://miro.medium.com/max/700/1*9qX9F9MGsWKfcmgTOR9BPw.png){width=500px}
-:::
-
-
-
-::::
-
-## Real World Examples
-
-
-### CAST
-
-[https://github.com/HannaMeyer/CAST](https://github.com/HannaMeyer/CAST)
-
-Package Page created with `pkgdown`
-
-```{r, eval = FALSE}
-
-install.packages("CAST")
-
-devtools::install_github(repo = "https://github.com/HannaMeyer/CAST")
-
-remotes::install_github(repo = "https://github.com/HannaMeyer/CAST")
-
-```
-
-Package Page created with `pkgdown`: [https://hannameyer.github.io/CAST](https://hannameyer.github.io/CAST)
-
-
-
-### Course Resources
-
-[Materials](https://ludwigm6.github.io/analysis_of_ecological_data) created with quarto, bookdown and GitHub Pages
-
-
-
-
-## Git Setup
-
-::::{.columns}
-
-:::{.column}
-
-
-### Get git
-
-* [https://git-scm.com/download/](https://git-scm.com/download/)
-* preinstalled on most GNU/Linux distributions
-
-
-### GitHub
-
-* create [GitHub Account](https://github.com)
-* ssh?
-
-### Configure git
-
-```
-git config --global user.name "Your Name"
-git config --global user.email "your@email.com"
-
-```
-
-
-:::
-
-:::{.column}
-
-### Configure R Studio Integration
-
-![](screenshots/rstudio2.png)
-
-:::
-
-::::
-
-## References
-
-::: {#refs}
-:::
 
 
